fixed input to have decimal on iphone, changed karat input to number, and fixed label wrapping margin

--- a/styles.css
+++ b/styles.css
@@ -21,6 +21,7 @@ a {
 }
  
 label {
+    display: block;
     font-size: 25px;
     margin: 5px;
 }
